--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
+    "@mui/joy": "^5.0.0-beta.29",
     "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.19.5",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "passport": "^0.4.1",
