--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
     "dayjs": "^1.11.10",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -27,7 +27,8 @@
     "react-router-dom": "^5.3.4",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "twilio": "^4.23.0"
   },
   "scripts": {
     "start": "node server/server.js",
