--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "sweetalert2": "^11.10.5",
     "twilio": "^4.23.0"
   },
   "scripts": {
